Fix button line height align

--- a/src/inputs/basic/button.styl
+++ b/src/inputs/basic/button.styl
@@ -26,14 +26,13 @@ outline-colourise-button(colour, interact-colour)
   -webkit-appearance: none
   box-sizing: border-box
   border-radius: edge-rounding
-  padding: 0 standard-padding
-  padding-top: (standard-font-size / 5)
+  padding: (standard-padding / 2)
   outline: none
   font-family: standard-font-families
   font-weight: standard-font-weight
   font-size: standard-font-size
-  line-height: 2em
   user-select: none
+  text-align: center
   &:not(:disabled)
     cursor: pointer
 
